:sparkles: feat: AV2 - Sistema de consultar entrega
